adicionado no projeto arquivos do editor de servico para criacao de ambiente docker criado ambiente estavel com carregamento de orgaos do estado do es